bpo-43816: add 'extern "C"' to pyctype.h

Signed-off-by: Andrew V. Jones <andrew.jones@vector.com>